test/expected/explain_af-c.out
explain auto f()
             ^
14: error: function can not be auto
